prevent navbtn jumping

--- a/components/projects/CarouselNav.module.scss
+++ b/components/projects/CarouselNav.module.scss
@@ -16,11 +16,11 @@
   cursor: pointer;
   user-select: none;
   outline: none;
-  &:hover {
+  &:hover svg {
     transition: all 0.5s;
     animation: pulse 1s infinite;
   }
-  &:focus {
+  &:focus svg {
     transition: all 0.5s;
     animation: pulse 1s infinite;
   }
